--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -2,7 +2,7 @@
 
 .logo {
     height: 3.25rem;
-    margin-left: 3rem;
+    margin-left: 2rem;
 }
 
 
@@ -57,16 +57,43 @@
 /*-------- USER NAVIGATION ---------*/
 
 .user-nav {
-    &__icon-box {}
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    &>* {
+        padding: 0 2rem;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+    &>*:hover {
+        background-color: var( --color-grey-light-2);
+    }
+    &__icon-box {
+        position: relative;
+    }
     &__icon {
         width: 2.25rem;
         height: 2.25rem;
     }
-    &__notification {}
-    &__user {}
+    &__notification {
+        position: absolute;
+        top: 1.5rem;
+        right: 1.1rem;
+        height: 1.75rem;
+        width: 1.75rem;
+        background-color: var(--color-primary);
+        border-radius: 50%;
+        font-size: .8rem;
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     &__user-photo {
         height: 3.75rem;
         border-radius: 50%;
+        margin-right: 1rem;
     }
-    &__user-name {}
 }
