--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -97,3 +97,23 @@
         margin-right: 1rem;
     }
 }
+
+
+/*-------- SIDE NAVIGATION ---------*/
+
+.side-nav {
+    &__icon {
+        width: 1.75rem;
+        height: 1.75rem;
+    }
+}
+
+
+/*-------- COPYRIGHTS ---------*/
+
+.legal {
+    font-size: 1.2rem;
+    color: var( --color-grey-light-4);
+    text-align: center;
+    padding: 2.5rem;
+}
