--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -102,9 +102,53 @@
 /*-------- SIDE NAVIGATION ---------*/
 
 .side-nav {
+    font-size: 1.4rem;
+    list-style: none;
+    margin-top: 3.5rem;
+    &__item::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 3px;
+        transform: scaleY(0);
+        height: 100%;
+        background-color: var(--color-primary);
+        transition: transform .2s, width .4s cubic-bezier(1, 0, 0, 1) .2s, background-color .1s;
+    }
+    &__item {
+        position: relative;
+        &:not(last-child) {
+            margin-bottom: .5rem;
+        }
+    }
+    &__item:hover::before,
+    &__item--active::before {
+        transform: scaleY(1);
+        width: 100%;
+    }
+    
+    &__item:active::before {
+        background-color: var(--color-primary-light);
+    }
+    
+    
     &__icon {
         width: 1.75rem;
         height: 1.75rem;
+        margin-right: 2rem;
+    }
+    &__link:link,
+    &__link:visited {
+        display: block;
+        padding: 1.5rem 3rem;
+        color: var(--color-grey-light-1);
+        text-decoration: none;
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        position: relative;
+        z-index: 10;
     }
 }
 
