--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -23,7 +23,6 @@
 .sidebar {
     background-color: var(--color-grey-dark-1);
     flex: 0 0 18%;
-    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -32,4 +31,25 @@
 .hotel-view {
     background-color: #fff;
     flex: 1;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    font-size: 1.4rem;
+    padding: 3rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+}
+
+.user-review {
+    flex: 1;
+    background-color: aqua;
 }
