--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -262,7 +262,7 @@
 }
 
 
-/*-------- DETAIL ---------*/
+/*-------- DESCRIPTION ---------*/
 
 .paragraph:not(:last-of-type) {
     margin-bottom: 2rem;
@@ -289,10 +289,32 @@
         //        background-image: url(../images/SVG/chevron-thin-right.svg);
         //        background-size: cover;
         background-color: var(--color-primary);
-        
         -webkit-mask-image: url(../images/SVG/chevron-thin-right.svg);
         -webkit-mask-size: cover;
         mask-image: url(../images/SVG/chevron-thin-right.svg);
         mask-size: cover;
+    }
+}
+
+
+/*-------- RECOMMEND ---------*/
+
+.recommend {
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    align-items: center;
+    &__count {
+        margin-right: auto;
+    }
+    &__photo {
+        box-sizing: content-box;
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        border: 3px solid #fff;
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
     }
 }
