--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -318,3 +318,44 @@
         }
     }
 }
+
+
+/*-------- REVIEWS ---------*/
+
+.review {
+    background-color: #fff;
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    box-shadow: var(--shadow-light);
+    &__text {
+        margin-bottom: 2rem;
+    }
+    &__user {
+        display: flex;
+        align-items: center;
+    }
+    &__photo {
+        width: 4.5rem;
+        height: 4.5rem;
+        border-radius: 50%;
+        margin-right: 1.5rem;
+    }
+    &__user-box {
+        margin-right: auto;
+    }
+    &__user-name {
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-bottom: .4rem;
+    }
+    &__user-date {
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+    &__rating {
+        color: var(--color-primaty);
+        font-size: 2.2rem;
+        font-weight: 300;
+    }
+}
