--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -259,12 +259,10 @@
         transform: scale(1);
         box-shadow: none;
     }
-
     50% {
         transform: scale(1.05);
-        box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, .25);
     }
-
     100% {
         transform: scale(1);
         box-shadow: none;
@@ -382,5 +380,49 @@
         font-family: sans-serif;
         line-height: 1;
         z-index: 1;
+    }
+}
+
+
+/*-------- CTA ---------*/
+
+.btn {
+    font-size: 1.5rem;
+    font-weight: 300;
+    border-radius: 100px;
+    color: #fff;
+    text-transform: uppercase;
+    border: none;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    &>* {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        transition: all .2s;
+    }
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+    &__invisible {
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        top: -100%;
+    }
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+    &:hover &__invisible {
+        top: 0;
+    }
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
     }
 }
