--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,21 +2,21 @@
     --color-primary: #eb2f64;
     --color-primary-light: #FF3366;
     --color-primary-dark: #BA265D;
-    
     --color-grey-light-1: #faf9f9;
     --color-grey-light-2: #f4f2f2;
     --color-grey-light-3: #f0eeee;
     --color-grey-light-4: #ccc;
-    
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
-    
-    --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
-    --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
-    
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
     --line: 1px solid var(--color-grey-light-2);
 }
+
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em; //1100px
+$bp-medium: 56.25em; //900px
 
 * {
     margin: 0;
@@ -32,6 +32,9 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+    @media only screen and( max-width: $bp-largest) {
+        font-size: 50%;
+    }
 }
 
 body {
@@ -42,6 +45,5 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     color: var(--color-grey-dark-2);
-    
     min-height: 100vh;
 }
