--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -4,6 +4,10 @@
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
     min-height: 50rem;
+    @media only screen and( max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+    }
 }
 
 .header {
@@ -18,6 +22,9 @@
 
 .content {
     display: flex;
+    @media only screen and( max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
 
 .sidebar {
@@ -39,6 +46,9 @@
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line);
     font-size: 1.4rem;
+    @media only screen and( max-width: $bp-medium) {
+        padding: 3rem;
+    }
 }
 
 .description {
@@ -47,6 +57,10 @@
     box-shadow: var(--shadow-light);
     flex: 0 0 60%;
     margin-right: 4.5rem;
+    @media only screen and( max-width: $bp-medium) {
+        padding: 2rem;
+        margin-right: 3rem;
+    }
 }
 
 .user-review {
@@ -59,6 +73,9 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+    @media only screen and( max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
     &__book-now {
         font-size: 2rem;
         font-weight: 300;
