--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -18,6 +18,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media only screen and( max-width: $bp-smallest) {
+        flex-wrap: wrap;
+        height: 11rem;
+        align-content: space-around;
+    }
 }
 
 .content {
@@ -49,6 +54,9 @@
     @media only screen and( max-width: $bp-medium) {
         padding: 3rem;
     }
+    @media only screen and( max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
 
 .description {
@@ -60,6 +68,10 @@
     @media only screen and( max-width: $bp-medium) {
         padding: 2rem;
         margin-right: 3rem;
+    }
+    @media only screen and( max-width: $bp-small) {
+        margin-bottom: 3rem;
+        margin-right: 0;
     }
 }
 
@@ -81,5 +93,9 @@
         font-weight: 300;
         margin-bottom: 2.5rem;
         text-transform: uppercase;
+        @media only screen and( max-width: $bp-smallest) {
+            font-size: 1.4rem;
+            padding: 0 1rem;
+        }
     }
 }
